--- a/res/layout/heart_rate_monitor_main_2.xml
+++ b/res/layout/heart_rate_monitor_main_2.xml
@@ -2,7 +2,6 @@
 <FrameLayout 
     android:orientation="vertical" 
     android:background="@color/white" 
-    android:padding="8.0dip" 
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent"
   xmlns:android="http://schemas.android.com/apk/res/android">
@@ -28,7 +27,7 @@
         android:layout_height="75.0dip">
         <TextView 
             android:textSize="@dimen/text_heart_rate_number_size" 
-            android:textColor="@color/black" 
+            android:textColor="@color/red" 
             android:id="@+id/heart_rate_number" 
             android:layout_width="wrap_content" 
             android:layout_height="wrap_content" 
